[workspace]
members = [
    "crates/storage",
    "crates/core",
    "crates/rpc",
    "crates/consensus",
    "crates/net",
    "crates/evm", 
    "reec",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rpc = { path = "./crates/rpc" }
ethereum-types = "0.14.1"
tracing = "0.1"
tracing-subscriber = "0.3.0"
libmdbx = { version = "0.5.0", features = ["orm"] }
