[package]
name = "rpc"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }



